:bug: avoid overflow small phones

--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ button {
 	background-color: #2b51a4;
 	padding: 12px;
 	color: #fff;
-	min-width: 356px;
+	min-width: 256px;
 	height: 400px;
 	display: flex;
 	align-items: center;
